--- a/backend/src/main/webapp/app/views/kitchen/search.html
+++ b/backend/src/main/webapp/app/views/kitchen/search.html
@@ -26,7 +26,7 @@
 						    		<code>{{'kichen.table' | translate}} {{ or.customer.tableDetail }} | {{'kichen.ref' | translate}} {{ or.customer.ref }}</code>
 			    				</td>
 			    				<td style="text-align: right;">
-			    					<span class="text-muted small"><em>{{ or.createdDateTime | date : 'HH:mm:ss' }}</em></span>
+			    					<span class="text-muted small"><em>{{ or.createdDateTime | date : 'HH:mm:ss.sss' }}</em></span>
 			    				</td>
 			    			</tr>
 			    		</table>
@@ -80,7 +80,7 @@
 						    		<code>{{'kichen.table' | translate}} {{ or.customer.tableDetail }} | {{'kichen.ref' | translate}} {{ or.customer.ref }}</code>
 			    				</td>
 			    				<td style="text-align: right;">
-			    					<span class="text-muted small"><em>{{ or.createdDateTime | date : 'HH:mm:ss' }}</em></span>
+			    					<span class="text-muted small"><em>{{ or.createdDateTime | date : 'HH:mm:ss.sss' }}</em></span>
 			    				</td>
 			    			</tr>
 			    		</table>
@@ -134,7 +134,7 @@
 						    		<code>{{'kichen.table' | translate}} {{ or.customer.tableDetail }} | {{'kichen.ref' | translate}} {{ or.customer.ref }}</code>
 			    				</td>
 			    				<td style="text-align: right;">
-			    					<span class="text-muted small"><em>{{ or.createdDateTime | date : 'HH:mm:ss' }}</em></span>
+			    					<span class="text-muted small"><em>{{ or.createdDateTime | date : 'HH:mm:ss.sss' }}</em></span>
 			    				</td>
 			    			</tr>
 			    		</table>
