--- a/backend/src/main/webapp/app/views/menu/add.html
+++ b/backend/src/main/webapp/app/views/menu/add.html
@@ -1,7 +1,7 @@
         
 <div>
-	<div class="col-lg-6">
-		<form name="addForm" role="addForm" ng-submit="isEdit ? update() : save()" novalidate>
+	<form name="addForm" role="addForm" ng-submit="isEdit ? update() : save()" novalidate>
+		<div class="col-lg-6">
 			<div class="form-group" ng-class="{'has-error':addForm.menuName.$invalid || existingUserShowErrMsg}">
 				<label class="control-label">{{'menu.addpage.form.menu_name' | translate}} *</label>
 				<span class="text-danger" ng-show="existingUserShowErrMsg" style="position: absolute; right: 0px;">
@@ -41,15 +41,20 @@
 	                  <input type="checkbox" ng-model="menu.isRecommented">{{'menu.addpage.form.is_recommented' | translate}}
 	            </label>
              </div>
-			<div style="text-align: center;">
-				<button type="button" class="btn btn-outline btn-primary btn-lg" ng-click="clear()">{{'user.addpage.celar_btn' | translate}}</button>
-				<button type="submit" class="btn btn-outline btn-primary btn-lg" ng-disabled="addForm.$invalid">{{ persisBtn }}</button>
-			</div>
-		</form>
-	</div>
+		</div>
 	
-	<div class="col-lg-6">
-		<img id="imgUpload" class="img-thumbnail" ng-src="{{ imageSource }}" ng-show="imageSource">
-	</div>
-	
+		<div class="col-lg-6" style="text-align: center">
+			<img id="imgUpload" class="img-thumbnail" ng-src="{{ imageSource }}" ng-show="imageSource">
+		</div>
+		
+		<div class="col-lg-12">
+			<label>{{'menu.addpage.form.instruction' | translate}}</label><br />
+			<textarea id="area1" name="area1" cols="70" style="width: 100%; min-height: 200px;"></textarea>
+		</div>
+		
+		<div style="text-align: center; margin-top: 20px;" class="col-lg-12">
+			<button type="button" class="btn btn-outline btn-primary btn-lg" ng-click="clear()">{{'user.addpage.celar_btn' | translate}}</button>
+			<button type="submit" class="btn btn-outline btn-primary btn-lg" ng-disabled="addForm.$invalid">{{ persisBtn }}</button>
+		</div>
+	</form>
 </div>
