--- a/backend/src/main/webapp/app/views/kitchen/search.html
+++ b/backend/src/main/webapp/app/views/kitchen/search.html
@@ -119,7 +119,7 @@
 	        
 	        <div class="panel-body">
 			    <div class="list-group">
-			    	<div ng-repeat="or in ordersFinished | orderBy:'changedStatusDateTime':true | limitTo: ordersFinishedQuantity" class="list-group-item comm-hover">
+			    	<div ng-repeat="or in ordersFinished | orderBy:'finishedChangedStatusDateTime':true | limitTo: ordersFinishedQuantity" class="list-group-item comm-hover">
 			    		<table style="width: 100%">
 			    			<tr>
 			    				<td>
@@ -138,7 +138,7 @@
 						    		<code>{{'kichen.table' | translate}} {{ or.customer.tableDetail }} | {{'kichen.ref' | translate}} {{ or.customer.ref }}</code>
 			    				</td>
 			    				<td style="text-align: right;">
-			    					<span class="text-muted small"><em>{{ or.changedStatusDateTime | date : 'HH:mm:ss' }}</em></span>
+			    					<span class="text-muted small"><em>{{ or.finishedChangedStatusDateTime | date : 'HH:mm:ss' }}</em></span>
 			    				</td>
 			    			</tr>
 			    		</table>
