--- a/backend/src/main/webapp/app/views/sale/detail.html
+++ b/backend/src/main/webapp/app/views/sale/detail.html
@@ -26,6 +26,10 @@
     </div>
 </div>
 
+<!-- <div>
+	<button type="button" ng-click="mayfender()">click to test</button>
+</div> -->
+
 	
 <div class="col-lg-12">	
 	<div class="table-responsive">	
@@ -90,6 +94,48 @@
             	<span style="font-size: 20px;">
 	         		เงินทอน  : {{ changePopup | number:2 }}-
          		</span>
+            </div>
+         </div>
+     </div>
+ </div>
+<!-- / Modal -->
+
+
+
+<!-- Modal -->
+ <div class="modal fade" id="myModal2" tabindex="-1" role="dialog">
+     <div class="modal-dialog">
+         <div class="modal-content" style="text-align: center;">
+         	<div class="modal-header">
+         		
+         		<div class="well well-sm" style="background-color:rgba(51, 122, 183, 0.1);">
+					<form class="form-inline">
+					  <div class="form-group">
+					    <input type="text" class="form-control" placeholder="{{'menu.search.form.name_hint' | translate}}" ng-model="$parent.formData.name" ng-keyup="search()">
+					  </div>
+					  <div class="form-group">
+						<select name="menuTypes" class="form-control" ng-model="$parent.formData.menuTypeId" ng-change="search()">
+							<option value="">{{'menu.search.form.type_dropdown_msg' | translate}}</option>
+						    <option ng-selected="{{ $parent.formData.menuTypeId == option.id }}"
+						    		ng-repeat="option in menuTypes" value="{{ option.id }}">{{ option.name }}</option>
+						</select>
+					  </div>
+					   <button style="margin-left: 20px;" type="button" class="btn btn-outline btn-primary" ng-click="clearSearchForm()">{{'menu.search.form.clear_btn' | translate}}</button>
+					</form>
+				</div>
+         		
+         		
+         	</div>
+         	<div class="modal-body">
+         		
+         		
+         		
+					
+         		
+         		
+         		
+         		
+         		
             </div>
          </div>
      </div>
