--- a/backend/src/main/webapp/app/views/menu/add.html
+++ b/backend/src/main/webapp/app/views/menu/add.html
@@ -96,7 +96,7 @@
 							</td>
 							<td class="comm-vert-align-center">
 					        	<span editable-text="op.price" e-name="price" e-form="rowform" e-type="number" onbeforesave="checkName($data)">
-									<span style="font-size: 20px;">{{ op.price }}</span>
+									<span style="font-size: 20px;">{{ op.price | number:2 }}</span>
 						        </span>
 							</td>
 						    <td class="comm-vert-align-center">
