--- a/backend/src/main/webapp/app/views/menu/add.html
+++ b/backend/src/main/webapp/app/views/menu/add.html
@@ -41,7 +41,7 @@
 	                 <label class="checkbox-inline" style="margin-left: 20px;">
 		                  <input type="checkbox" ng-model="menu.isRecommented">{{'menu.addpage.form.is_recommented' | translate}}
 		            </label>
-		            <button type="button" ng-show="isEdit" style="margin-left: 20px;" class="btn btn-outline btn-primary" ng-click="subMenu()">เมนูย่อย</button>
+		            <button type="button" ng-show="isEdit" style="margin-left: 20px;" class="btn btn-outline btn-primary" ng-click="subMenu()">{{ 'menu.sub.show_btn' | translate }}</button>
 	             </div>
 			</div>
 		
@@ -82,8 +82,8 @@
 				<table class="table table-striped table-hover">
 					<thead>
 						<tr style="font-weight: bold">
-							<td style="width:30%">ชื่อเมนูย่อย</td>
-						    <td style="width:20%">ราคา</td>
+							<td style="width:30%">{{ 'menu.sub.table_header.name' | translate }}</td>
+						    <td style="width:20%">{{ 'menu.sub.table_header.price' | translate }}</td>
 						    <td style="width:20%"></td>
 						    <td style="width:30%"></td>
 						</tr>
@@ -102,8 +102,8 @@
 							</td>
 							
 							<td class="comm-vert-align-center">
-					        	<span editable-checkbox="op.amountFlag" e-name="amountFlag" e-form="rowform" e-title="ระบุจำนวน">
-									<span>{{ op.amountFlag && "ระบุจำนวน" || "ไม่ระบุจำนวน" }}</span>
+					        	<span editable-checkbox="op.amountFlag" e-name="amountFlag" e-form="rowform" e-title="{{ 'menu.sub.can_amount' | translate }}">
+									<span>{{ op.amountFlag && canAmount || cannAmount }}</span>
 						        </span>
 							</td>
 							
@@ -124,7 +124,7 @@
 						</tr>
 					</tbody>
 				</table>
-         		<button class="btn btn-default" ng-click="addSubMenu()">เพิ่มเมนูย่อย</button>
+         		<button class="btn btn-default" ng-click="addSubMenu()">{{ 'menu.sub.add_btn' | translate }}</button>
          		
             </div>
          </div>
