--- a/backend/src/main/webapp/app/views/sale/detail.html
+++ b/backend/src/main/webapp/app/views/sale/detail.html
@@ -49,14 +49,35 @@
 			<tbody>
 				<tr ng-repeat="or in orders">
 					<td class="comm-vert-align-center">{{ $index + 1 }}</td>
-					<td class="comm-vert-align-center" ng-class="{'comm-line-through': or.isCancel}">{{ or.menu.name}}</td>
-					<td class="comm-vert-align-center">{{ or.menu.menuType.name}}</td>
+					<td class="comm-vert-align-center" ng-class="{'comm-line-through': or.isCancel}">
+						{{ or.menu.name}}
+						<ul>
+							<li ng-repeat="ors in or.subMenus">
+								{{ ors.name }}
+							</li>
+						</ul>
+					</td>
+					<td class="comm-vert-align-center">
+						{{ or.menu.menuType.name }}
+						<ul>
+							<li ng-repeat="ors in or.subMenus">
+								เสริม
+							</li>
+						</ul>
+					</td>
 					<td>
 						<a href="#" ng-if="cusStatus == 0 ? false : !or.isCancel" editable-number="or.amount" e-style="width: 80px" onbeforesave="updateAmount($data, or.id, or.menu.price, or.amount, this)">{{ or.amount }}</a>
 						<span ng-if="cusStatus == 0 ? true : or.isCancel">{{ or.amount }}</span>
+						<div ng-repeat="ors in or.subMenus">{{ ors.amount == null ? '-' : ors.amount }}</div>
 					</td>
-					<td class="comm-vert-align-center">{{ or.isCancel == true ? 0 : or.menu.price | number:2 }}</td>
-					<td class="comm-vert-align-center">{{ or.isCancel == true ? 0 : or.menu.price * or.amount | number:2 }}</td>
+					<td class="comm-vert-align-center">
+						{{ or.isCancel == true ? 0 : or.menu.price | number:2 }}
+						<div ng-repeat="ors in or.subMenus">{{ ors.price | number:2 }}</div>
+					</td>
+					<td class="comm-vert-align-center">
+						{{ or.isCancel == true ? 0 : or.menu.price * or.amount | number:2 }}
+						<div ng-repeat="ors in or.subMenus">{{ ors.price * (ors.amount || 1) | number:2 }}</div>
+					</td>
 					<td class="comm-vert-align-center">
 						<i class="fa fa-circle-o-notch fa-lg" ng-if="or.status == 0 && !or.isCancel"></i>
 						<i class="fa fa-refresh fa-lg fa-spin" style="color: #5CB85C;" ng-show="or.status == 1 && !or.isCancel"></i>
@@ -71,6 +92,15 @@
 							<i class="fa fa-times fa-lg user-action-icon-danger" ng-if="!or.isCancel" ng-click="cancelOrder(or.id, or.menu.name)"></i>
 							<i class="fa fa-undo fa-lg" style="color: #5CB85C;cursor: pointer;" ng-if="or.isCancel" ng-click="uncancelOrder(or.id, or.menu.name)"></i>
 						</div>
+						
+						<ul>
+							<li ng-repeat="ors in or.subMenus">
+								<div ng-if="cusStatus">
+									<i class="fa fa-times fa-lg user-action-icon-danger" ng-if="!ors.isCancel" ng-click="cancelOrder(ors.id, ors.name)"></i>
+									<i class="fa fa-undo fa-lg" style="color: #5CB85C;cursor: pointer;" ng-if="ors.isCancel" ng-click="uncancelOrder(ors.id, ors.name)"></i>
+								</div>
+							</li>
+						</ul>
 					</td>
 				</tr>
 			</tbody>
