--- a/backend/src/main/webapp/app/views/sale/detail.html
+++ b/backend/src/main/webapp/app/views/sale/detail.html
@@ -70,7 +70,10 @@
 						<span ng-if="cusStatus == 0 ? true : or.isCancel">{{ or.amount }}</span>
 						<ul>
 							<li ng-repeat="ors in or.subMenus">
-								{{ ors.amount == null ? '-' : ors.amount }}
+								
+								<a href="#" ng-if="cusStatus == 0 ? false : or.isCancel ? false : !ors.isCancel" editable-number="ors.amount" e-style="width: 80px" onbeforesave="updateSubAmount($data, ors.id, ors.price, ors.amount, this)">{{ ors.amount }}</a>
+								<span ng-if="cusStatus == 0 ? true : or.isCancel ? true : ors.isCancel">{{ ors.amount == null ? '-' : ors.amount }}</span>
+								
 							</li>
 						</ul>
 					</td>
