--- a/backend/src/main/webapp/app/views/menu/add.html
+++ b/backend/src/main/webapp/app/views/menu/add.html
@@ -17,20 +17,36 @@
 					</span>
 					<input name="menuPrice" type="number" class="form-control" ng-model="menu.price" ng-change="existingUserErrMsg = null" ng-disabled="autoGen" required>
 				</div>
-				<div class="form-group" ng-class="{'has-error':addForm.menuTypes.$invalid}">
+				
+				
+				
+				<div class="form-group col-lg-6" ng-class="{'has-error':addForm.menuTypes.$invalid}">
 					<label class="control-label">{{'menu.addpage.form.menu_type' | translate}} *</label>
-					<select name="menuTypes" class="form-control" ng-model="menu.menuType.id" required>
+					<select name="menuTypes" class="form-control" ng-model="menu.menuType.id" ng-change="getMenuTypeChilds()" required>
 						<option value="">{{'menu.search.form.type_dropdown_msg' | translate}}</option>
 				      	<option ng-selected="{{ menu.menuType.id == option.id }}" 
 				      			ng-repeat="option in menuTypes" value="{{ option.id }}">{{ option.name }}</option>
 				    </select>
 				</div>
-				<div class="form-group well well-sm">
+				
+				
+				<div class="form-group col-lg-6" ng-class="{'has-error':addForm.menuTypeChilds.$invalid}" ng-if="menuTypeChilds">
+					<label class="control-label">{{'menu.addpage.form.menu_type_childs' | translate}} *</label>
+					<select name="menuTypeChilds" class="form-control" ng-model="menu.menuTypeChild.id" required>
+						<option value="">{{'menu.search.form.type_dropdown_msg' | translate}}</option>
+				      	<option ng-selected="{{ menu.menuTypeChild.id == option.id }}" 
+				      			ng-repeat="option in menuTypeChilds" value="{{ option.id }}">{{ option.name }}</option>
+				    </select>
+				</div>
+				
+				
+				
+				<div class="form-group well well-sm col-lg-12">
 					<label class="control-label">{{'menu.addpage.form.menu_img' | translate}}</label>
 					<input id="image" name="image" type="file" onchange="angular.element(this).scope().preview(this)" 
 					       ng-model='imgUpload' base-sixty-four-input accept=".png,.jpg,.gif" />
 				</div>
-				<div class="form-group">
+				<div class="form-group col-lg-12">
 	                 <label>{{'menu.addpage.form.status' | translate}} &nbsp;&nbsp;</label>
 	                 <label class="radio-inline">
 	                     <input type="radio" name="status" value="1" ng-checked="menu.status == 1" ng-model="menu.status">{{'menu.addpage.form.status_enable' | translate}}
