--- a/backend/src/main/webapp/app/views/menu/add.html
+++ b/backend/src/main/webapp/app/views/menu/add.html
@@ -30,7 +30,7 @@
 				</div>
 				
 				
-				<div class="form-group col-lg-6" ng-class="{'has-error':addForm.menuTypeChilds.$invalid}" ng-show="menuTypeChilds">
+				<div class="form-group col-lg-6" ng-class="{'has-error':addForm.menuTypeChilds.$invalid}" ng-if="menuTypeChilds">
 					<label class="control-label">{{'menu.addpage.form.menu_type_childs' | translate}} *</label>
 					<select name="menuTypeChilds" class="form-control" ng-model="menu.menuTypeChild.id" required>
 						<option value="">{{'menu.search.form.type_dropdown_msg' | translate}}</option>
